# nothing_to_see_here_folks

./: logic.ll
Game_of_life/: CMakeLists.txt  common.h  graphics.cpp  graphics.h  ir_gen.ll  logic.c  logic.cpp  logic.h  main.cpp
Game_of_life/grammar/: CMakeLists.txt  common.h  grammar.y  graphics.cpp  graphics.h  guide.txt  lex.l  main.shlang  test1.shlang  testfile.ll
Game_of_life/ir_gen/: CMakeLists.txt  ir_gen.cpp  main.ll
